syntax = "proto3";

package com.road.yishi.proto.battle;

message BattleReqMsg {
  int32 userId = 1;
  string battleId = 2;
  int32 armyId = 3;
  int32 otherObj = 4;
}
